style.css
/* ... */
/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/* Make elements with the HTML hidden attribute stay hidden by default */

[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.bottom-4 {
  bottom: 1rem;
}

.left-0 {
  left: 0px;
}

.left-4 {
  left: 1rem;
}

.top-0 {
  top: 0px;
}

.order-last {
  order: 9999;
}

.order-first {
  order: -9999;
}

.col-span-full {
  grid-column: 1 / -1;
}

.m-auto {
  margin: auto;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.h-full {
  height: 100%;
}

.max-h-full {
  max-height: 100%;
}

.w-full {
  width: 100%;
}

.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.flex-col {
  flex-direction: column;
}

.gap-10 {
  gap: 2.5rem;
}

.gap-5 {
  gap: 1.25rem;
}

.overflow-hidden {
  overflow: hidden;
}

.bg-black {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
}

.bg-gray-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
}

.object-cover {
  -o-object-fit: cover;
     object-fit: cover;
}

.object-center {
  -o-object-position: center;
     object-position: center;
}

.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.py-20 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.font-bold {
  font-weight: 700;
}

.text-gray-700 {
  --tw-text-opacity: 1;
  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
}

.filter {
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video, main, input, button {
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: baseline;
  box-sizing: border-box;
}

*::before,*::after{
  box-sizing: border-box;
}

article, aside, details, figcaption, figure,  
footer, header, hgroup, menu, nav, section, main {
  display: block;
}

img, svg {
  height: auto;
  transform: translate3d(0,0,0);
  backface-visibility: hidden;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  transition: all 0.1s ease 0s;
}

.videoBlock svg{
  transition: all 0.2s ease 0s;
  will-change: transform;
}

.videoBlock svg:hover{
  transform: scale(1.05);
  cursor: pointer;
}

.videoBlock video{
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: center;
     object-position: center;
}

html{
  font-family: 'Helvetica';
  overflow-x: hidden;
  font-size: 16px;
  line-height: 1.5;
}

body {
  font-size: 1em;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background: #fff;
  color: #000;
}

img{
  max-width: 100%;
  max-height: 100%;
  vertical-align: middle;
  height: auto;
}

.ta-center{
  text-align: center;
}

.d-none{
  display: none;
}

button{
  font-size: 1em;
  cursor: pointer;
  transition: 0.3s;
  font-family: 'Helvetica';
}

input[type='submit']{
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

select,
textarea,
input{
  font-size: 1em;
  max-width: 100%;
  color: #000;
  font-weight: 350;
  font-family: 'Helvetica';
}

a{
  color: inherit;
  transition: 0.3s;
}

a:active,
a:hover,
a{
  text-decoration: none;
}

a:active,
button:active{
  opacity: 0.8;
}

svg{
  height: auto;
}

.tire{
  font-size: 0.74em;
  transform: scaleY(1.4) translate(0,-0.1em);
  display: inline-block;
  margin: 0 0.15em;
}

.header{
  background: rgba(9, 9, 9, 0.5);
  height: 6.25em;
  position: sticky;
  top: -6.5em;
  z-index: 555;
  margin-bottom: -6.25em;
  transition: 0.3s top;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header__wrapper{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.header.show{
  top: 0;
}

.header__link{
  display: flex;
  justify-content: center;
  align-items: center;
  color: #4F4F4F;
  letter-spacing: 0.016285em;
  font-weight: 500;
  font-size: 0.875em;
  line-height: 1;
  background: #FFFFFF;
  border-radius: 2.142em;
  height: 2.85714em;
  padding: 0 1.315em;
  margin: 0 0.35714em;
}

.scrollUp{
  position: fixed;
  bottom: 2.9375em;
  right: 2.9375em;
  border-radius: 100%;
  width: 6.625em;
  height: 6.625em;
  border: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: #4F4F4F;
  color: #fff;
  z-index: 5;
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
  pointer-events: none;
  opacity: 0;
}

.scrollUp.show{
  opacity: 1;
  pointer-events: all;
}

.scrollUp:hover{
  transform: scale(1.05);
}

.scrollUp svg{
  height: auto;
  width: 2.125em;
  margin: -0.2em 0 0.9em;
}

.scrollUp span{
  line-height: 1;
  font-size: 0.875em;
  font-weight: 500;
}

.toMain-pc{
  display: flex;
  align-items: center;
  -moz-column-gap: 0.7142857143em;
       column-gap: 0.7142857143em;
}

.toMain-m{
  display: none;
}

@media(max-width: 1000px){
  .toMain-pc{
    display: none;
  }

  .toMain-m{
    display: flex;
    -moz-column-gap: 0.7142857143em;
         column-gap: 0.7142857143em;
    position: absolute;
    top: 2.1428571em;
    left: 2.5em;
    z-index: 1;
  }
}
/* ... */

